Fix VerifyError at class load in minified consumer apps.