@@ -38,8 +38,16 @@ public final class JavaObject implements JSEngineObject, JSEngineJavaObject {
     }
 
     public static Method getGetterMethod(String key, Method[] methods) {
+        // Captured as AccessibleObject[] (not Method[]): R8 horizontally merges the
+        // MemoizeFunc lambda classes in this library, and merged constructors whose
+        // captures are sibling array types (Method[] here, Constructor[] in construct())
+        // share a register without a checkcast, causing a VerifyError at class load
+        // in minified consumer apps. Identical capture types make the merge safe.
+        //noinspection UnnecessaryLocalVariable
+        AccessibleObject[] members = methods;
         return JSEngineContext.javaObjectGetter.memoize(() -> {
-            for (Method method : methods) {
+            for (AccessibleObject member : members) {
+                Method method = (Method) member;
                 // name match, no args, and a return type
                 if (method.getParameterTypes().length != 0)
                     continue;
@@ -59,8 +67,12 @@ public final class JavaObject implements JSEngineObject, JSEngineJavaObject {
     }
 
     public static Method getSetterMethod(String key, Method[] methods) {
+        // AccessibleObject[] capture: see getGetterMethod.
+        //noinspection UnnecessaryLocalVariable
+        AccessibleObject[] members = methods;
         return JSEngineContext.javaObjectSetter.memoize(() -> {
-            for (Method method : methods) {
+            for (AccessibleObject member : members) {
+                Method method = (Method) member;
                 // name match, no args, and a return type
                 if (method.getParameterTypes().length != 1)
                     continue;
@@ -280,7 +292,7 @@ public final class JavaObject implements JSEngineObject, JSEngineJavaObject {
         Constructor[] constructors = clazz.getConstructors();
         if (constructors.length == 0) {
             try {
-                return clazz.newInstance();
+                return clazz.getDeclaredConstructor().newInstance();
             }
             catch (Exception e) {
                 return new IllegalArgumentException(e);
@@ -294,10 +306,14 @@ public final class JavaObject implements JSEngineObject, JSEngineJavaObject {
             else
                 argTypes.add(arg.getClass());
         }
+        // AccessibleObject[] capture: see getGetterMethod.
+        //noinspection UnnecessaryLocalVariable
+        AccessibleObject[] members = constructors;
         Constructor best = JSEngineContext.javaObjectConstructorCandidates.memoize(() -> {
             Constructor ret = null;
             int bestScore = Integer.MAX_VALUE;
-            for (Constructor constructor: constructors) {
+            for (AccessibleObject member: members) {
+                Constructor constructor = (Constructor) member;
                 // parameter count is most important
                 int score = Math.abs(argTypes.size() - constructor.getParameterTypes().length) * 1000;
                 // tiebreak by checking parameter types
